add support for (fake) 2nd api
